@@ -1,14 +1,17 @@
-FROM gradle:4.7.0-jdk8-alpine AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build --no-daemon
+FROM openjdk:12-jdk-alpine
+COPY app /app
 
-FROM openjdk:8-jre-slim
+#FROM gradle:4.7.0-jdk8-alpine AS build
+#COPY --chown=gradle:gradle . /home/gradle
+#WORKDIR /home/gradle
+#RUN gradle build --no-daemon
+#
+#FROM openjdk:8-jre-slim
+#
+#EXPOSE 8080
 
-EXPOSE 8080
-
-RUN mkdir /app
-
-COPY --from=build /home/gradle/src/wrapper/*.jar /app/application.jar
-
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/application.jar"]
+#RUN mkdir /app
+#
+#COPY --from=build ./gradle/wrapper/gradle-wrapper.jar /app/application.jar
+#
+#ENTRYPOINT ["java", "-jar","/app/application.jar"]
